# Minecraft-HDR-Mod

./: .gitignore  .gitmodules  README-zh.md  README.md  build.gradle  changelog.md  gradle.properties  settings.gradle
.github/workflows/: build.yml  release.yml
common/: build.gradle
common/src/main/java/xyz/rrtt217/: Enums.java  GLFWColorManagement.java  HDRMod.java
common/src/main/java/xyz/rrtt217/HDRMod/: HDRMod.java
common/src/main/java/xyz/rrtt217/config/: HDRModConfig.java
common/src/main/java/xyz/rrtt217/core/: CommonFloatUBO.java  PngjHDRScreenshot.java
common/src/main/java/xyz/rrtt217/mixin/: MixinGlCommandEncoder.java  MixinGlDevice.java  MixinMainTarget.java  MixinMinecraft.java  MixinRenderSystem.java  MixinRenderTarget.java  MixinWindow.java
common/src/main/java/xyz/rrtt217/util/: HDRModInjectHooks.java  LibraryExtractor.java
common/src/main/resources/: hdr_mod.classtweaker  hdr_mod.mixins.json
common/src/main/resources/assets/hdr_mod/lang/: en_us.json  zh_cn.json
common/src/main/resources/iccs/: RGB_D65_202_Rel_PeQ.icc
fabric/: build.gradle
fabric/src/main/resources/: fabric.mod.json  hdr_mod.classtweaker  hdr_mod.fabric.mixins.json
forge/: build.gradle
forge/run/config/: embeddium-mixins.properties
forge/src/main/resources/: pack.mcmeta
native/: build.gradle
native/dx11-interop-shim/: CMakeLists.txt
native/dx11-interop-shim/include/: dx11_shim.h
native/dx11-interop-shim/src/: dx11_shim.c  flipy.hlsl
neoforge/: build.gradle
neoforge/src/main/resources/: hdr_mod.neoforge.mixins.json
(+157 files in other folders)
